Add media queries for navbar component

--- a/src/styles/game/navbar.css
+++ b/src/styles/game/navbar.css
@@ -38,6 +38,51 @@
 }
 
 .navbar-restart-button:hover {
-    color: var(--light-color);
-    background: var(--main-color);
+  color: var(--light-color);
+  background: var(--main-color);
+}
+
+@media screen and (max-width: 1199px) and (min-width: 781px) {
+  .navbar-item {
+    font-size: var(--min-font-size);
+    display: flex;
+    gap: 0.5rem;
+    align-items: center;
+  }
+  .navbar-board {
+    padding: 0.2rem;
+    border-radius: 0.4rem;
+    box-shadow: 5px 5px 5px 5px rgba(250, 250, 250, 0.5);
+  }
+  .navbar-restart-button {
+    border: 1px solid rgba(129, 131, 29, 1);
+    background: transparent;
+    padding: .5rem;
+    border-radius: 0.5rem;
+    cursor: pointer;
+    transition: 1s all;
+  }
+}
+
+@media screen and (max-width: 780px) {
+  .navbar-item {
+    font-size: var(--min-font-size);
+    display: flex;
+    gap: 0.5rem;
+    align-items: center;
+  }
+  .navbar-board {
+    font-size: var(--min-font-size);
+    padding: 0.1rem;
+    border-radius: 0.2rem;
+    box-shadow: 5px 5px 5px 5px rgba(250, 250, 250, 0.5);
+  }
+  .navbar-restart-button {
+    border: 1px solid rgba(129, 131, 29, 1);
+    background: transparent;
+    padding: .5rem;
+    border-radius: 0.5rem;
+    cursor: pointer;
+    transition: 1s all;
+  }
 }
