--- a/src/styles/game/game-tool.css
+++ b/src/styles/game/game-tool.css
@@ -1,11 +1,23 @@
 .game-tools {
+  width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   padding: 0% 1%;
 }
 
+.left-game-tool {
+  display: flex;
+  border: 1px solid var(--dark-color);
+  cursor: pointer;
+  width: 7vw;
+  height: 9.8vw;
+  border-radius: 0.3vw;
+  box-shadow: 5px 5px 5px 5px rgba(250, 250, 250, 0.5);
+}
+
 .game-tool-card {
+  display: flex;
   border: 1px solid var(--dark-color);
   cursor: pointer;
   width: 7vw;
